Fix alignment of icon in recent activity.
closes #491

--- a/frontend/src/components/common/presentational/recentActivity/style.scss
+++ b/frontend/src/components/common/presentational/recentActivity/style.scss
@@ -15,6 +15,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-left: -7px;
     .allTopicImg {
       display: flex;
       align-items: center;
